# PPPModern

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
.githooks/: pre-commit  pre-commit.cmd  pre-commit.ps1
.github/workflows/: format.yml
cmake/toolchains/: x86_64-w64-mingw32.cmake
include/ppp/core/: bmp.h  geometry.h  image.h  image_ops.h  job.h  job_processor.h  job_repository.h  job_serialization.h  job_service.h  output_writer.h  pdf_writer.h  processing_config.h  processing_config_io.h  processing_pipeline.h  scheduling_policy.h  scheduling_policy_io.h  tiff.h  tiff_writer.h
scripts/: fetch_sqlite.sh
src/: bmp.cpp  geometry.cpp  image.cpp  image_ops.cpp  job.cpp  job_processor.cpp  job_repository.cpp  job_repository_sqlite.cpp  job_repository_sqlserver.cpp  job_serialization.cpp  job_service.cpp  output_writer.cpp  pdf_writer.cpp  processing_config.cpp  processing_config_io.cpp  processing_pipeline.cpp  scheduling_policy_io.cpp  sqlite_support.h  tiff.cpp  tiff_writer.cpp
tests/: job_service_tests.cpp
tests/regression/: regression_tests.cpp
tools/: ppp_batch.cpp  ppp_jobctl.cpp  ppp_jobviewer.cpp
